# subscription-not-terminating

./: README.md
apollo-router-test/: router.yaml  supergraph.yaml
simple-strawberry-service/: app.py  pyproject.toml
